--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,9 @@
 		<link rel="stylesheet" href="../build/css/style.css" />
 		<title>Document</title>
 	</head>
-	<body class="grid gap-8">
+	<body class="grid gap-8 place-content-center min-h-full">
 		<div
-			class="bg-emerald-500 w-52 h-52 shadow-2xl rounded-sm grid place-content-center"
+			class="bg-emerald-500 w-52 h-52 shadow-2xl rounded-full grid place-content-center"
 		></div>
-
-		<!-- > -->
 	</body>
 </html>
