tailwind with flexbox

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,29 @@
 		<link rel="stylesheet" href="../build/css/style.css" />
 		<title>Document</title>
 	</head>
-	<body class="grid gap-8 place-content-center min-h-full">
-		<div
-			class="bg-emerald-500 w-52 h-52 shadow-2xl rounded-full grid place-content-center"
-		></div>
+	<body class="flex h-screen items-center bg-black p-3 text-white">
+		<div class="mx-auto flex max-w-4xl flex-col flex-wrap gap-6 md:flex-row">
+			<div class="mx-auto max-w-lg flex-1 bg-gray-800 p-3">
+				<p class="font-light">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, corporis
+					veniam nostrum eveniet obcaecati libero fugit quos, fuga est maxime
+					recusandae tempore illum quisquam dignissimos fugiat temporibus
+					explicabo nesciunt cumque porro
+				</p>
+			</div>
+			<div class="mx-auto max-w-lg flex-1 bg-gray-800 p-4">
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, corporis
+					veniam nostrum eveniet obcaecati libero fugit quos, fuga est maxime
+					recusandae tempore illum quisquam
+				</p>
+			</div>
+			<div class="mx-auto max-w-lg flex-1 bg-gray-800 p-4">
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, corporis
+					veniam nostrum eveniet obcaecati libero fugit quos, fuga est maxime
+				</p>
+			</div>
+		</div>
 	</body>
 </html>
